<resources>
    <string name="app_name">BeatBerry</string>
    <string name="menu_home">Home</string>
    <string name="no_music">There is no music message</string>
    <string name="menu_create_playlist">Create a playlist</string>
    <string name="menu_view_playlists">View all playlists</string>
    <string name="menu_rescan">Rescan for music</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About the application</string>
    <string name="settings_language">Language</string>
    <string name="settings_clear_cache">Clear application cache</string>
    <string name="about_created_by">Created with Love by Engineer Mihawk/Bader 👨🏻‍💻🤍</string>
    <string name="about_location">Made in Saudi Arabia, Alhasa 🇸🇦🌴</string>
    <string name="about_version">Version 1.0</string>
    <string name="about_github">For more great projects like this visit my Github Page</string>
    <string name="rescan_message">Scanning for music...</string>
    <string name="btn_start_scanning">Start Scanning</string>
    <string name="btn_manual_add">Add Manually</string>
    <string name="playlist_name_hint">Enter playlist name</string>
    <string name="btn_create">Create</string>
    <string name="rescan_title">Rescan for Music</string>
    <string name="create_playlist_title">Create New Playlist</string>

    <!-- Option Menus -->
    <string name="action_search_songs">Search for a song</string>
    <string name="action_search_playlists">Search for a playlist</string>
    <string name="action_search_playlist_songs">Search for music</string>
    <string name="action_sort_songs">Sort the songs</string>
    <string name="action_sort_playlists">Sort the playlists</string>
    <string name="action_rearrange_music">Re-arange the music</string>

    <string name="sort_name_asc">Name Ascending</string>
    <string name="sort_name_desc">Name Descending</string>
    <string name="sort_newly_added">Newly Added</string>
    <string name="sort_oldest_added">Oldest Added</string>
    <string name="sort_newly_created">Newly Created</string>
    <string name="sort_oldest_created">Oldest Created</string>

    <string name="btn_add_songs">Add Music</string>
    <string name="action_add_to_playlist">Add this music to playlist</string>
    <string name="action_add_to_favorite">Add this music to favorite</string>
</resources>