<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_playlists"
        android:title="@string/action_search_playlists"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort_playlists"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/sort_name_asc"
                android:title="@string/sort_name_asc" />
            <item
                android:id="@+id/sort_name_desc"
                android:title="@string/sort_name_desc" />
            <item
                android:id="@+id/sort_newest"
                android:title="@string/sort_newly_created" />
            <item
                android:id="@+id/sort_oldest"
                android:title="@string/sort_oldest_created" />
        </menu>
    </item>
</menu>